making route to cshtml instead razor

--- a/EC-Billing/Views/Employee/Index.cshtml
+++ b/EC-Billing/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EmployeeData.Models.EmployeeViewModel>
+﻿@model List<Models.DbEntities.Employee>
 
 @{
     ViewData["Title"] = "Employee details";
@@ -33,3 +33,5 @@
         </tbody>
     </table>
 </form>
+
+<h1>hej</h1>
