seeding all db tables with ef core

--- a/EC-Billing/Views/Employee/Index.cshtml
+++ b/EC-Billing/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EmployeeData.Models.EmployeeViewModel>
+﻿@* @model List<EmployeeData.Models.EmployeeViewModel>
 
 @{
     ViewData["Title"] = "Employee details";
@@ -44,4 +44,4 @@
     </table>
 </form>
 
-<h1>hej</h1>
+<h1>hej</h1> *@
