Making interfaces and desplaying employee in razor page

--- a/EC-Billing/Components/Pages/Employees.razor
+++ b/EC-Billing/Components/Pages/Employees.razor
@@ -17,7 +17,7 @@
 }
 
 @code {
-    private List<Employee>? employees;
+    private IEnumerable<Employee>? employees;
 
     protected override async Task OnInitializedAsync()
     {
